<resources>
    <string name="app_name">Premise Weather</string>
    <string name="input_location_hint">Location: e.g. Seattle</string>
    <string name="enter">Enter</string>
    <string name="location_label_info">Location: %s\nLat Lon: %s</string>
    <string name="last_updated">Last Updated: %s</string>
    <string name="error_message">There was an error</string>
</resources>
