...
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
...
